structr-app/src/main/resources/structr/css/main.css
/* ... */
#images .image {
	padding: 1rem 2rem;
}

#images {
	width: 100%;
}

#images .pager {
	margin-bottom: 12px;
}

#images .image {
	width: 102px;
	height: 130px;
	float: left;
	margin-right: 4px;
	position: relative;
	color: var(--gray-555);
}

#imageFolders .folder {
	border: 1px solid var(--gray-ccc);
	background: var(--image-folder-yellow) ! important;
	width: 100%;
}

#images .image div.wrap {
	position: absolute;
	top: 50%;
	left: 50%;
}

#images .image img.thumbnail {
	margin-top: -42px;
	margin-left: -50%;
	max-width: 100px;
	max-height: 100px;
}

#images .imageDetail {
	max-width: 776px;
	max-height: 776px;
	margin: 0;
	padding: 0;
}

.readonly {
	color: var(--gray-999);
}

.typeIcon {
	flex-shrink: 0;
	border: none;
	background: none;
	cursor: pointer ! important;
}


/* set the hidden nodes icon to have a background and little opacity */
.is-hidden > .node-container .typeIcon {
	opacity: 0.5;
}

/* set all children of a hidden node to have even less opacity */
.is-hidden > .node .typeIcon {
	opacity: 0.3;
}

.typeIcon {
	width: 16px;
	height: 16px;
	margin: 0rem .5rem 0 .25rem;
}

.typeIcon-nochildren {
	margin-left: 20px ! important;
}

.expand_icon_svg {
	flex-shrink: 0;
	cursor: pointer;
	z-index: 2;
	width: 1.25rem;
	height: 1.5rem;
	top: 0.25rem;
	left: 0.25rem;
}

.svg-collapsed {
	background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='%21f242d'><polygon points='0,0 0,100 50,50'/></svg>") no-repeat;
	background-size: 0.8rem;
	background-position: 0.35rem 0.35rem;
}

.svg-expanded {
	background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='%21f242d'><polygon points='0,0 100,0 50,50'/></svg>") no-repeat;
	background-size: 0.8rem;
	background-position: 0.15rem 0.55rem;
}

.icons-container {
	margin-right: .5rem;
	align-items: end;
}

.tile .icons-container {
	position: absolute;
	right: 0;
	bottom: .375rem;
	top: initial;
}

.tile.img-tile .icons-container {
	position: absolute;
	top: .375rem;
	right: 0;
	bottom: initial;
}

.icons-container svg {
	margin-left: .125rem;
}

.node-action-icon {
	display: none;
	cursor: pointer;
}

.nodeHover > .icons-container > .node-action-icon,
.nodeHover > .node-container > .icons-container > .node-action-icon,
.jstree-hovered > .icons-container > .node-action-icon,
.schema:hover .icons-container > .node-action-icon {
	display: inline-block;
}

.node .node-container.node-selected {
	background-color: var(--structr-light-green-transparent);
}

#add_type {
	position: absolute;
	right: 12px;
	top: 68px;
	margin: 0;
}

i.button {
	cursor: pointer;
}

.nodeHover,
.nodeActive,
#graph-canvas .node {
	color: var(--gray-333) ! important;
	background-color: var(--light-gray-bg-f3);
}

.slideOut .node {
	margin: 0 0 0 1rem;
}

#components, #elements {
	display: flex;
	flex-direction: column;
}

#componentsArea, #elementsArea {
	overflow: auto;
	flex-grow: 1;
}

.node.nodeSelectedFromContextMenu {
	color: var(--gray-333) ! important;
	background-color: var(--light-gray-bg-f7) ! important;
	border: 1px dashed var(--gray-777);
}

.node.contextMenuActive {
	color: var(--gray-333) ! important;
	background-color: var(--structr-light-green-transparent) ! important;
}

.nodeSelected {
	background-color: var(--light-yellow-bg) ! important;
}

.node-highlighted-light-blue {
	background-color: var(--light-blue) ! important;
}

button.action {
	border: 1px solid var(--structr-green);
	color: var(--solid-white);
	background-color: var(--structr-green);
}

button.action:hover {
	color: var(--solid-white);
	background-color: var(--dark-structr-green);
}

button.action.disabled:hover {
	color: var(--solid-white);
	background-color: var(--structr-green);
	cursor: not-allowed;
}

.non-block-ui-blocker-content {
	position: fixed;
	display: flex;
	width: 100%;
	height: calc(100vh - 8rem);
}

.non-block-ui-blocker-content.maximized {
	position: absolute;
	top: 0;
	height: calc(100vh);
}

body[style*=zoom] .non-block-ui-blocker-content {
	height: calc(50vh - 4rem);
}

.dialog, .confirmationText {
	padding: 1rem;
	background-color: var(--solid-white);
	margin: auto;
}

#dialogBox .window-icon {
	position: absolute;
	color: var(--icon-stroke);
}

#dialogBox .minmax {
	top: 1rem;
	left: 1rem;
	width: 16px;
	height: 16px;
}

#dialogBox .close {
	top: 1rem;
	right: 1rem;
	width: 16px;
	height: 16px;
}

#dialogBox .window-icon:hover {
	cursor: pointer;
	color: var(--icon-stroke-hover);
}

#confirmation {
	min-height: 24px;
	padding: 12px;
	overflow: auto;
}

#dialogBox {
	width: calc(60vw);
	height: calc(60vh);
	padding: 0 2rem 5rem 2rem;
	position: relative;
	display: flex;
	flex-direction: column;
    border-radius: .5rem;
    background-color: #f4f4f4;
    box-shadow: 0 0 .5rem var(--structr-light-green)
}

#dialogBox.maximized {
	width: calc(100vw - 4rem);
	height: calc(100vh - 5rem);
    max-height: calc(100vh - 5rem);
    border-radius: 0;
    margin: 0;
}

#dialogBox.insert-widget-dialog {
    width: calc(40vw);
    height: calc(25vh);
}

#dialogBox.maximized.insert-widget-dialog {
    width: calc(100vw - 4rem);
    height: calc(100vh - 5rem);
}

/* set default sizes for dialogs with tabs */
#dialogBox:has(ul > li.tab),
#dialogBox:has(div.widgets-tabs),
#dialogBox:has(div#tabs) {
    height: calc(45vh);
}
#dialogBox.maximized:has(#tabs),
#dialogBox.maximized:has(#files-tabs),
#dialogBox.maximized:has(.widgets-tabs) {
    height: calc(100vh - 5rem);
}

#dialogBox.execute-method-dialog {
	height: calc(45vh);
}

#dialogBox.file-edit-dialog.popup-dialog-with-editor {
	height: calc(60vh);
}
#dialogBox.file-edit-dialog.popup-dialog-with-editor .dialogText {
	padding: .25rem 1rem 0 1rem;
}
#dialogBox.file-edit-dialog.popup-dialog-with-editor .dialogMeta {
	padding: .5rem 0 0 0;
}

#dialogBox.schema-edit-dialog .dialogText {
	padding: .25rem 1rem 1rem 1rem;
}
#dialogBox.schema-edit-dialog .dialogMeta {
	padding: 0.5rem 0 0 0;
}
/* ... */

